...
        "postinstall",
        "proc",
        "product",
        "product_services",
        "property_contexts",
        "recovery",
        "res",
        "root",
        "sbin",
        "sdcard",
        "second_stage_resources",
        "seapp_contexts",
        "service_contexts",
...
